# backend/routes/api.js
@@ -35,4 +35,7 @@ router.get("/dish/rating/general", apiController.dishRatingGeneralGet);
 // Smazat hodnocení
 router.post("/dish/rating/delete", apiController.dishRatingDelete);
 
+// Získání ohodnocení jídla od ostaních lidí
+router.get("/dish", apiController.dishGet);
+
 module.exports = router;
